name:           npaste
version:        3.0
synopsis:       npaste.de
author:         Nils Schweinsberg <mail@n-sch.de>
maintainer:     Nils Schweinsberg <mail@n-sch.de>
category:       Network

build-type:     Simple
cabal-version:  >= 1.10

executable npaste.de
    hs-source-dirs: src
    main-is: Main.hs
    ghc-options: -Wall
    default-language: Haskell2010

    build-depends:
        base                    == 4.*,
        bytestring              == 0.9.*,
        containers              == 0.4.*,
        mtl                     == 2.*,
        random                  == 1.*,
        time                    == 1.*,
        old-locale              == 1.*,
        MaybeT                  == 0.1.*,
        parsec                  == 3.*,
        HDBC                    == 2.*,
        HDBC-postgresql         == 2.*,
        mstate                  >= 0.2.5,
        convertible             == 1.*,
        monad-peel              == 0.1.*,
        Crypto                  == 4.*,
        happstack               == 6.*,
        happstack-data          == 6.*,
        happstack-ixset         == 6.*,
        happstack-server        == 6.*,
        happstack-state         == 6.*,
        happstack-util          == 6.*,
        blaze-html              == 0.4.*,
        hslogger                == 1.*,
        highlighting-kate       == 0.2.*,
        SMTPClient              == 1.*,
        email-validate          == 0.2.*
