name:           npaste
version:        3.0
synopsis:       npaste.de
author:         Nils Schweinsberg <mail@n-sch.de>
maintainer:     Nils Schweinsberg <mail@n-sch.de>
category:       Network

build-type:     Simple
cabal-version:  >= 1.10

executable npaste.de
    hs-source-dirs: src
    main-is: Main.hs
    ghc-options: -Wall
    default-language: Haskell2010

    build-depends:
        base                    == 4.*,
        bytestring, containers, mtl, transformers, random, time, old-locale,
        text, MaybeT,
        parsec, hslogger,
        HDBC, HDBC-postgresql,
        mstate, convertible, monad-peel,
        Crypto,
        happstack, happstack-server, acid-state, safecopy,
        happstack-monad-peel,
        blaze-markup, blaze-html, highlighter,
        SMTPClient, email-validate
