name:           npaste
version:        3.0
synopsis:       npaste.de
author:         Nils Schweinsberg <mail@n-sch.de>
maintainer:     Nils Schweinsberg <mail@n-sch.de>
category:       Network

build-type:     Simple
cabal-version:  >= 1.10

executable npaste.de
    hs-source-dirs: src
    main-is: Main.hs
    ghc-options: -Wall
    default-language: Haskell2010

    build-depends:
        base == 4.*,
        bytestring, containers,
        transformers >= 0.4,
        mtl >= 2.2,
        stm,
        random, time, old-locale,
        text,
        parsec, hslogger,
        HDBC, HDBC-postgresql,
        convertible,
        Crypto,
        happstack-server,
        blaze-markup, blaze-html,
        SMTPClient, email-validate
